Fixed some errors with sNPX_NX_0 not having correct model parameters as well as the entrance specifications in map_specifications.R.

--- a/analysis/experiment_1/analysis.Rmd
+++ b/analysis/experiment_1/analysis.Rmd
@@ -68,7 +68,7 @@ for (p in 1:length(data_1)) {
 }
 
 # Write the preprocessed data.
-write_csv(data_3, file.path(pilot_path, "data.csv"))
+# write_csv(data_3, file.path(pilot_path, "data.csv"))
 ```
 
 ## Goal Predictions
